# reservations

./: .test.env  Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 506dfa1eaa72_create_appointment_table.py  c05a193c95b5_create_client_table.py  c935cfa11e1e_create_provider_table.py  ef5b0b5144ec_create_provider_schedule_table.py
app/api/api_v1/routers/: appointments.py  clients.py  provider_schedules.py  providers.py
app/core/: config.py
app/crud/: appointments.py  clients.py  provider_schedules.py  providers.py
app/db/: session.py
app/domain/: provider_schedules.py
app/models/: appointment.py  client.py  provider.py  provider_schedule.py
app/schemas/api/: provider_schedule.py
app/schemas/crud/: appointment.py  client.py  provider_schedule.py  providers.py
app/tests/: conftest.py
app/tests/integration/api/: test_appointments.py  test_provider_schedules.py
app/tests/unit/domain/: test_provider_schedules.py
