[tool.poetry]
name = "reservations"
version = "0.1.0"
description = "reservations api for clients and providers"
authors = ["Norton Gumbo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
alembic = "^1.13.1"
pydantic-settings = "^2.3.2"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
black = "^24.4.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
